resolved profilepicture distortion in chat

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -131,6 +131,7 @@
   img {
     width: 40px;
     height: 40px;
+    object-fit: cover;
     border-radius: 10px;
   }
 }
